objects/Booking_Information__c.object
<CustomObject>
    <label>Booking Information</label>
    <nameField>
        <label>Booking Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Booking Information</relationshipLabel>
        <relationshipName>Booking_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bi_lingual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bi-lingual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>US_Ticketing__c</fullName>
        <label>US Ticketing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>